--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
 				<a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
 			</div>
-			<img src="img/Telas.png" alt="Tela da alura plus e do alura lingua" class="secundario__imagem">
+			<img src="IMG/Telas.png" alt="Tela da alura plus e do alura lingua" class="secundario__imagem">
 		</section>
 
 		<section class="container secundario">
@@ -49,22 +49,22 @@
 			<h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
 			<ul class="dispositivos__lista">
 				<li>
-					<img src="img/tv.png" alt="ícone de televisão">
+					<img src="IMG/tv.png" alt="ícone de televisão">
 					<h3 class="lista__item">TV</h3>
 				</li>
 				<li>
-					<img src="img/computador.png" alt="ícone de computador">
+					<img src="IMG/computador.png" alt="ícone de computador">
 					<h3 class="lista__item">Computadores</h3>
 				</li>
 				<li>
-					<img src="img/celular.png" alt="ícone de celular">
+					<img src="IMG/celular.png" alt="ícone de celular">
 					<h3 class="lista__item">Celular</h3>
 				</li>
 			</ul>
 		</section>
 
 		<footer class="rodape">
-			<img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+			<img src="IMG/Logo.png" alt="Alura+" class="rodape__logo">
 			<ul class="rodape__lista">
 				<li class="lista__link">
 					<a href="#">Idioma</a>
